Fixed alignmnent of search form in mobile menu

--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -157,7 +157,7 @@
 //
 
 .searchform {
-	padding: 20px 0 20px 15px;
+	padding: 20px 15px;
 
 	@include atleast-md {
 		padding: 0;
